# app/Models/EndOfDay.php
@@ -12,4 +12,25 @@ class EndOfDay extends Model
     use HasFactory;
 
     protected $guarded = [];
+
+    public function payments()
+    {
+        return $this->hasMany(EndOfDayPayment::class, 'end_of_day_id', 'end_of_day_id')->where(function ($query) {
+            $query->where('branch_id', $this->branch_id);
+        });
+    }
+
+    public function discounts()
+    {
+        return $this->hasMany(EndOfDayDiscount::class, 'end_of_day_id', 'end_of_day_id')->where(function ($query) {
+            $query->where('branch_id', $this->branch_id);
+        });
+    }
+
+    public function departments()
+    {
+        return $this->hasMany(EndOfDayDepartment::class, 'end_of_day_id', 'end_of_day_id')->where(function ($query) {
+            $query->where('branch_id', $this->branch_id);
+        });
+    }
 }
